--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "~5.1",
-        "illuminate/html": "5.0.*",
-        "darryldecode/cart": "~2"
+        "php": ">=5.5.9"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
